final final commit for weatherpy

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1518,7 +1518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The above graph"
+    "#### The above graph shows the wind speed by city latitude.  Based on the graph there doesn't appear to be a relationship between the two as it appears wind speeds transverse across the latitude specturm."
    ]
   },
   {
@@ -1776,7 +1776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This graph shows us the humidity % versus latitude for the northern hemisphere.  Because our r-value is .1, we can say that there is either a very weak or no relationship.  This means regardless of where we are in the northern hemisphere, we cannot expect the humidity to be at a specific level. "
+    "#### This graph shows us the humidity % versus latitude for the northern hemisphere.  Because our r-value is .1, we can say that there is either a very weak or no relationship.  This means regardless of where we are in the northern hemisphere, we cannot expect the humidity to be at a specific level. "
    ]
   },
   {
