final final commit for weatherpy

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1980,7 +1980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This graph shows us the wind speed % versus latitude for the northern hemisphere.  Because our r-value is .009, we can say that there is either a very weak or no relationship between the two."
+    "#### This graph shows us the wind speed in miles per hour versus latitude for the northern hemisphere.  Because our r-value is .009, we can say that there is either a very weak or no relationship between the two."
    ]
   },
   {
@@ -2031,7 +2031,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This graph shows us the wind speed % versus latitude for the southern hemisphere.  Because our r-value is .045, we can say that there is either a very weak or no relationship between the two."
+    "#### This graph shows us the wind speed in mph versus latitude for the southern hemisphere.  Because our r-value is .045, we can say that there is either a very weak or no relationship between the two."
    ]
   }
  ],
