final final commit for weatherpy

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -50,7 +50,8 @@
     "from citipy import citipy\n",
     "\n",
     "# Output File (CSV)\n",
-    "output_data_file = \"output_data/cities.csv\"\n",
+    "outputPath=\"Output/\"\n",
+    "outputCsv= outputPath+\"cities.csv\"\n",
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
@@ -829,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +876,7 @@
        "      <td>10000</td>\n",
        "      <td>9.77</td>\n",
        "      <td>CA</td>\n",
-       "      <td>1619211929</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -887,7 +888,7 @@
        "      <td>10000</td>\n",
        "      <td>1.44</td>\n",
        "      <td>RU</td>\n",
-       "      <td>1619212178</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -899,7 +900,7 @@
        "      <td>10000</td>\n",
        "      <td>3.09</td>\n",
        "      <td>JP</td>\n",
-       "      <td>1619212178</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -911,13 +912,13 @@
        "1  Aleksandrovskiy Zavod  50.9237  117.9374    270.90        27       10000   \n",
        "2               Katsuura  35.1333  140.3000    284.82        76       10000   \n",
        "\n",
-       "   Wind Speed Country        Date  \n",
-       "0        9.77      CA  1619211929  \n",
-       "1        1.44      RU  1619212178  \n",
-       "2        3.09      JP  1619212178  "
+       "   Wind Speed Country                     Date  \n",
+       "0        9.77      CA  <class 'datetime.date'>  \n",
+       "1        1.44      RU  <class 'datetime.date'>  \n",
+       "2        3.09      JP  <class 'datetime.date'>  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,10 +939,6 @@
     "\n",
     "#convert dictionary to df\n",
     "weatherDF = pd.DataFrame(weatherDict)\n",
-    "\n",
-    "#declare csv output path\n",
-    "outputPath=\"Output/\"\n",
-    "outputCsv= outputPath+\"weather.csv\"\n",
     "\n",
     "# Export file as a CSV, without the Pandas index, but with the header\n",
     "weatherDF.to_csv(outputCsv, index=False, header=True)\n",
