--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -45,7 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "#create import file path\n",
+    "inputFile = \"../WeatherPy/Output/weather.csv\"\n",
+    "\n",
+    "weatherCitiesDF = pd.read_csv()\n"
    ]
   },
   {
@@ -159,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
