added Units to the URL for the weather pull and captured data for 4/24.  I found doing part two my weather wasn't converted correctly.  This is fixed.

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Torbay</td>\n",
+       "      <td>47.6666</td>\n",
+       "      <td>-52.7314</td>\n",
+       "      <td>280.37</td>\n",
+       "      <td>65</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>9.77</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aleksandrovskiy Zavod</td>\n",
+       "      <td>50.9237</td>\n",
+       "      <td>117.9374</td>\n",
+       "      <td>270.90</td>\n",
+       "      <td>27</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Katsuura</td>\n",
+       "      <td>35.1333</td>\n",
+       "      <td>140.3000</td>\n",
+       "      <td>284.82</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>JP</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Grindavik</td>\n",
+       "      <td>63.8424</td>\n",
+       "      <td>-22.4338</td>\n",
+       "      <td>281.15</td>\n",
+       "      <td>87</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>IS</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Satellite Beach</td>\n",
+       "      <td>28.1761</td>\n",
+       "      <td>-80.5901</td>\n",
+       "      <td>297.15</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>5.66</td>\n",
+       "      <td>US</td>\n",
+       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0                 Torbay  47.6666  -52.7314    280.37        65       10000   \n",
+       "1  Aleksandrovskiy Zavod  50.9237  117.9374    270.90        27       10000   \n",
+       "2               Katsuura  35.1333  140.3000    284.82        76       10000   \n",
+       "3              Grindavik  63.8424  -22.4338    281.15        87       10000   \n",
+       "4        Satellite Beach  28.1761  -80.5901    297.15        50       10000   \n",
+       "\n",
+       "   Wind Speed Country                     Date  \n",
+       "0        9.77      CA  <class 'datetime.date'>  \n",
+       "1        1.44      RU  <class 'datetime.date'>  \n",
+       "2        3.09      JP  <class 'datetime.date'>  \n",
+       "3        8.75      IS  <class 'datetime.date'>  \n",
+       "4        5.66      US  <class 'datetime.date'>  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create import file path\n",
-    "inputFile = \"../WeatherPy/Output/weather.csv\"\n",
+    "inputFile = \"../WeatherPy/Output/cities.csv\"\n",
     "\n",
-    "weatherCitiesDF = pd.read_csv()\n"
+    "#load dataframe\n",
+    "weatherCitiesDF = pd.read_csv(inputFile)\n",
+    "\n",
+    "#create output file\n",
+    "outputPath=\"../Output/\"\n",
+    "# outputCsv= outputPath+\"cities.csv\"\n",
+    "\n",
+    "weatherCitiesDF.head()"
    ]
   },
   {
@@ -63,10 +188,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [City, Lat, Lng, Max Temp, Humidity, Cloudiness, Wind Speed, Country, Date]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "niceWeatherDF = weatherCitiesDF.loc[(weatherCitiesDF[\"Max Temp\"].between(70,80))]\n",
+    "niceWeatherDF"
+   ]
   },
   {
    "cell_type": "code",
