added Units to the URL for the weather pull and captured data for 4/24.  I found doing part two my weather wasn't converted correctly.  This is fixed.

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,85 +79,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Torbay</td>\n",
-       "      <td>47.6666</td>\n",
-       "      <td>-52.7314</td>\n",
-       "      <td>280.37</td>\n",
-       "      <td>65</td>\n",
+       "      <td>Bluff</td>\n",
+       "      <td>-46.6000</td>\n",
+       "      <td>168.3333</td>\n",
+       "      <td>42.01</td>\n",
+       "      <td>94</td>\n",
        "      <td>10000</td>\n",
-       "      <td>9.77</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1619267164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Aleksandrovskiy Zavod</td>\n",
-       "      <td>50.9237</td>\n",
-       "      <td>117.9374</td>\n",
-       "      <td>270.90</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Puerto Ayora</td>\n",
+       "      <td>-0.7393</td>\n",
+       "      <td>-90.3518</td>\n",
+       "      <td>75.99</td>\n",
+       "      <td>95</td>\n",
        "      <td>10000</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>1619267165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Katsuura</td>\n",
-       "      <td>35.1333</td>\n",
-       "      <td>140.3000</td>\n",
-       "      <td>284.82</td>\n",
-       "      <td>76</td>\n",
+       "      <td>Carnarvon</td>\n",
+       "      <td>-24.8667</td>\n",
+       "      <td>113.6333</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>78</td>\n",
        "      <td>10000</td>\n",
-       "      <td>3.09</td>\n",
-       "      <td>JP</td>\n",
-       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1619267165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Grindavik</td>\n",
-       "      <td>63.8424</td>\n",
-       "      <td>-22.4338</td>\n",
-       "      <td>281.15</td>\n",
-       "      <td>87</td>\n",
+       "      <td>Kavaratti</td>\n",
+       "      <td>10.5669</td>\n",
+       "      <td>72.6420</td>\n",
+       "      <td>85.44</td>\n",
+       "      <td>67</td>\n",
        "      <td>10000</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>IS</td>\n",
-       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "      <td>7.47</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1619267165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Satellite Beach</td>\n",
-       "      <td>28.1761</td>\n",
-       "      <td>-80.5901</td>\n",
-       "      <td>297.15</td>\n",
-       "      <td>50</td>\n",
+       "      <td>Pangnirtung</td>\n",
+       "      <td>66.1451</td>\n",
+       "      <td>-65.7125</td>\n",
+       "      <td>32.49</td>\n",
+       "      <td>83</td>\n",
        "      <td>10000</td>\n",
-       "      <td>5.66</td>\n",
-       "      <td>US</td>\n",
-       "      <td>&lt;class 'datetime.date'&gt;</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>1619267166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0                 Torbay  47.6666  -52.7314    280.37        65       10000   \n",
-       "1  Aleksandrovskiy Zavod  50.9237  117.9374    270.90        27       10000   \n",
-       "2               Katsuura  35.1333  140.3000    284.82        76       10000   \n",
-       "3              Grindavik  63.8424  -22.4338    281.15        87       10000   \n",
-       "4        Satellite Beach  28.1761  -80.5901    297.15        50       10000   \n",
+       "           City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0         Bluff -46.6000  168.3333     42.01        94       10000   \n",
+       "1  Puerto Ayora  -0.7393  -90.3518     75.99        95       10000   \n",
+       "2     Carnarvon -24.8667  113.6333     73.40        78       10000   \n",
+       "3     Kavaratti  10.5669   72.6420     85.44        67       10000   \n",
+       "4   Pangnirtung  66.1451  -65.7125     32.49        83       10000   \n",
        "\n",
-       "   Wind Speed Country                     Date  \n",
-       "0        9.77      CA  <class 'datetime.date'>  \n",
-       "1        1.44      RU  <class 'datetime.date'>  \n",
-       "2        3.09      JP  <class 'datetime.date'>  \n",
-       "3        8.75      IS  <class 'datetime.date'>  \n",
-       "4        5.66      US  <class 'datetime.date'>  "
+       "   Wind Speed Country        Date  \n",
+       "0        5.01      NZ  1619267164  \n",
+       "1        5.99      EC  1619267165  \n",
+       "2        8.05      AU  1619267165  \n",
+       "3        7.47      IN  1619267165  \n",
+       "4        3.44      CA  1619267166  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -212,37 +212,128 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>City</th>\n",
        "      <th>Lat</th>\n",
        "      <th>Lng</th>\n",
        "      <th>Max Temp</th>\n",
        "      <th>Humidity</th>\n",
        "      <th>Cloudiness</th>\n",
        "      <th>Wind Speed</th>\n",
-       "      <th>Country</th>\n",
        "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>1.350000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.026361</td>\n",
+       "      <td>1.771334</td>\n",
+       "      <td>75.892815</td>\n",
+       "      <td>72.229630</td>\n",
+       "      <td>9590.392593</td>\n",
+       "      <td>6.950370</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>20.929420</td>\n",
+       "      <td>95.174393</td>\n",
+       "      <td>2.687916</td>\n",
+       "      <td>22.281423</td>\n",
+       "      <td>1426.696660</td>\n",
+       "      <td>4.908114</td>\n",
+       "      <td>6.630166e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-34.418700</td>\n",
+       "      <td>-175.200000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1609.000000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-18.109600</td>\n",
+       "      <td>-68.798650</td>\n",
+       "      <td>73.510000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>2.990000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-0.900000</td>\n",
+       "      <td>-15.446100</td>\n",
+       "      <td>76.370000</td>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>5.750000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>20.455800</td>\n",
+       "      <td>97.309650</td>\n",
+       "      <td>78.460000</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10.010000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>46.616600</td>\n",
+       "      <td>169.266700</td>\n",
+       "      <td>79.740000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>25.320000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [City, Lat, Lng, Max Temp, Humidity, Cloudiness, Wind Speed, Country, Date]\n",
-       "Index: []"
+       "              Lat         Lng    Max Temp    Humidity    Cloudiness  \\\n",
+       "count  135.000000  135.000000  135.000000  135.000000    135.000000   \n",
+       "mean     1.026361    1.771334   75.892815   72.229630   9590.392593   \n",
+       "std     20.929420   95.174393    2.687916   22.281423   1426.696660   \n",
+       "min    -34.418700 -175.200000   70.000000    2.000000   1609.000000   \n",
+       "25%    -18.109600  -68.798650   73.510000   60.000000  10000.000000   \n",
+       "50%     -0.900000  -15.446100   76.370000   78.000000  10000.000000   \n",
+       "75%     20.455800   97.309650   78.460000   89.000000  10000.000000   \n",
+       "max     46.616600  169.266700   79.740000  100.000000  10000.000000   \n",
+       "\n",
+       "       Wind Speed          Date  \n",
+       "count  135.000000  1.350000e+02  \n",
+       "mean     6.950370  1.619267e+09  \n",
+       "std      4.908114  6.630166e+01  \n",
+       "min      0.400000  1.619267e+09  \n",
+       "25%      2.990000  1.619267e+09  \n",
+       "50%      5.750000  1.619267e+09  \n",
+       "75%     10.010000  1.619267e+09  \n",
+       "max     25.320000  1.619267e+09  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "niceWeatherDF = weatherCitiesDF.loc[(weatherCitiesDF[\"Max Temp\"].between(70,80))]\n",
-    "niceWeatherDF"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -262,10 +353,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.458100</td>\n",
+       "      <td>-47.269020</td>\n",
+       "      <td>76.204000</td>\n",
+       "      <td>93.900000</td>\n",
+       "      <td>5992.600000</td>\n",
+       "      <td>5.225000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.611071</td>\n",
+       "      <td>57.326551</td>\n",
+       "      <td>2.289261</td>\n",
+       "      <td>6.999206</td>\n",
+       "      <td>2819.177863</td>\n",
+       "      <td>2.306326</td>\n",
+       "      <td>9.698087e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-7.259700</td>\n",
+       "      <td>-99.890100</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>78.000000</td>\n",
+       "      <td>1609.000000</td>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-4.460800</td>\n",
+       "      <td>-86.095875</td>\n",
+       "      <td>74.742500</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>4000.000000</td>\n",
+       "      <td>3.732500</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.296250</td>\n",
+       "      <td>-53.055000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>6000.000000</td>\n",
+       "      <td>4.610000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>14.589275</td>\n",
+       "      <td>-34.925150</td>\n",
+       "      <td>77.037500</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>8035.250000</td>\n",
+       "      <td>5.727500</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>29.595800</td>\n",
+       "      <td>98.490800</td>\n",
+       "      <td>78.800000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>9656.000000</td>\n",
+       "      <td>9.980000</td>\n",
+       "      <td>1.619267e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Lat        Lng   Max Temp    Humidity   Cloudiness  Wind Speed  \\\n",
+       "count  10.000000  10.000000  10.000000   10.000000    10.000000   10.000000   \n",
+       "mean    7.458100 -47.269020  76.204000   93.900000  5992.600000    5.225000   \n",
+       "std    13.611071  57.326551   2.289261    6.999206  2819.177863    2.306326   \n",
+       "min    -7.259700 -99.890100  72.000000   78.000000  1609.000000    2.300000   \n",
+       "25%    -4.460800 -86.095875  74.742500   91.000000  4000.000000    3.732500   \n",
+       "50%     5.296250 -53.055000  77.000000   94.000000  6000.000000    4.610000   \n",
+       "75%    14.589275 -34.925150  77.037500  100.000000  8035.250000    5.727500   \n",
+       "max    29.595800  98.490800  78.800000  100.000000  9656.000000    9.980000   \n",
+       "\n",
+       "               Date  \n",
+       "count  1.000000e+01  \n",
+       "mean   1.619267e+09  \n",
+       "std    9.698087e+01  \n",
+       "min    1.619267e+09  \n",
+       "25%    1.619267e+09  \n",
+       "50%    1.619267e+09  \n",
+       "75%    1.619267e+09  \n",
+       "max    1.619267e+09  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "niceWeatherDF = weatherCitiesDF.loc[(weatherCitiesDF[\"Max Temp\"].between(70,80))\n",
+    "                                    & (weatherCitiesDF[\"Wind Speed\"] < 10.00)\n",
+    "                                    & (weatherCitiesDF[\"Cloudiness\"] < 10000) \n",
+    "                                   ]\n",
+    "niceWeatherDF.dropna()\n",
+    "niceWeatherDF.describe() #sanity check"
+   ]
   },
   {
    "cell_type": "markdown",
